--- a/public/style/style.css
+++ b/public/style/style.css
@@ -20,15 +20,23 @@ body {
 	font-size: 20px;
 }
 
+#question {
+	font-family: sans-serif;
+	visibility: hidden;
+	font-size: 20px;
+}
+
 #container {
 	border: 3px solid rgb(201, 0, 1); 
 	overflow: hidden; 
 	margin: 15px auto; 
 	max-width: 753px;
+	visibility: hidden;
 }
 
-#iframe {
+#iframe, #cover {
 	position: relative;
+	point-events: none;
 	top: 305px;
 	border: 0px none; 
 	margin-left: -185px; 
@@ -38,10 +46,20 @@ body {
 	right: 200px;
 }
 
+#iframe {
+  z-index:1;
+}
+
+#cover {
+  z-index:2;
+  position:absolute;
+  width: 100%;
+  height: 100%;
+}
+
 #footer{
 	font-family: Arial;
 	font-size: 13px;
-	position: absolute;
 	right: 0;
 	bottom: 0;
 	left: 0;
