connected to mysql database using php

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -22,6 +22,11 @@ body {
 	font-size: 20px;
 }
 
+#test{
+	color: red;
+	font-size: 1000px;
+}
+
 #container {
 	border: 3px solid rgb(201, 0, 1); 
 	overflow: hidden; 
