--- a/public/style/style.css
+++ b/public/style/style.css
@@ -23,8 +23,8 @@ body {
 }
 
 #test{
-	color: red;
-	font-size: 1000px;
+	color: purple;
+	font-size: 10px;
 }
 
 #container {
@@ -71,7 +71,7 @@ body {
 .happy{background-color: red;}
 .sad{background-color: grey;}
 .calm {background-color: #008CBA;} /* Blue */
-.excited {background-color: #4CAF50;} /* Red */ 
-.adventurous {background-color: brown;} /* Gray */ 
+.excited {background-color: #4CAF50;} /* GREEN */ 
+.adventurous {background-color: brown;}
 
 
